# ADPfusionSet

./: .travis.yml  ADPfusionSet.cabal  README.md  cabal.project  changelog.md  devel-stack.yaml
ADP/Fusion/: Boundary.hs  EdgeBoundary.hs  Set.hs  Set1.hs  Set2.hs
ADP/Fusion/Core/: Boundary.hs  EdgeBoundary.hs  Set.hs  Set1.hs  Set2.hs
ADP/Fusion/SynVar/Indices/: Set0.hs  Set1.hs  Set2.hs
ADP/Fusion/Term/: EdgeWithSet.hs
ADP/Fusion/Term/Chr/: Set0.hs
ADP/Fusion/Term/Edge/: EdgeBoundary.hs  Set.hs  Set1.hs  Set2.hs
ADP/Fusion/Term/EdgeWithSet/: EdgeBoundary.hs  Set1.hs  Type.hs
ADP/Fusion/Term/Epsilon/: Set.hs  Set1.hs  Set2.hs
ADP/Fusion/Term/PeekIndex/: Set1.hs
ADP/Fusion/Term/Singleton/: Set1.hs  Set2.hs  Type.hs
ADP/Fusion/Term/Vertex/: Set2.hs  Type.hs
tests/QuickCheck/: Set.hs
