name:           ADPfusionSet
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2016
copyright:      Christian Hoener zu Siederdissen, 2016
homepage:       https://github.com/choener/ADPfusionSet
bug-reports:    https://github.com/choener/ADPfusionSet/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Algorithms, Data Structures, Bioinformatics, Formal Languages
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.10.3, GHC == 8.0.1
synopsis:       Dynamic programming for Set data structures.
description:
                <http://www.bioinf.uni-leipzig.de/Software/gADP/ generalized Algebraic Dynamic Programming>
                .
                Extensions of ADPfusion for set-(like) data structures.
                .



Extra-Source-Files:
  README.md
  changelog.md



flag examples
  description:  build the examples
  default:      False
  manual:       True

flag debug
  description:  Enable bounds checking and various other debug operations at the cost of a significant performance penalty.
  default:      False
  manual:       True



library
  build-depends: base               >= 4.7      &&  < 5.0
               , bits               >= 0.4      &&  < 0.6
               , containers
               , mmorph             >= 1.0      &&  < 1.1
               , mtl                >= 2.0      &&  < 2.3
               , primitive          >= 0.5.4    &&  < 0.7
               , QuickCheck         >= 2.7      &&  < 2.9
               , strict             >= 0.3      &&  < 0.4
               , template-haskell   >= 2.0      &&  < 3.0
               , th-orphans         >= 0.12     &&  < 0.14
               , transformers       >= 0.3      &&  < 0.6
               , tuple              >= 0.3      &&  < 0.4
               , vector             >= 0.11     &&  < 0.12
               --
               , ADPfusion          == 0.5.2.*
               , DPutils            >= 0.0.0    &&  < 0.0.2
               , OrderedBits        == 0.0.1.*
               , PrimitiveArray     == 0.8.0.*

  exposed-modules:
    -- multi imports
--    ADP.Fusion.Set
    ADP.Fusion.Boundary
    ADP.Fusion.Set1
--    ADP.Fusion.Set2
    -- Set
--    ADP.Fusion.Core.Set
    ADP.Fusion.Core.Boundary
    ADP.Fusion.Core.Set1
--    ADP.Fusion.Core.Set2
--    ADP.Fusion.SynVar.Indices.Set0
    ADP.Fusion.SynVar.Indices.Set1
--    ADP.Fusion.Term.Chr.Set0
--    ADP.Fusion.Term.Edge.Set
    ADP.Fusion.Term.Edge.Set1
--    ADP.Fusion.Term.Edge.Set2
--    ADP.Fusion.Term.Epsilon.Set
    ADP.Fusion.Term.Epsilon.Set1
    ADP.Fusion.Term.Singleton.Set1
--    ADP.Fusion.Term.Singleton.Set2
    ADP.Fusion.Term.Singleton.Type

  default-extensions: BangPatterns
                    , ConstraintKinds
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , MultiParamTypeClasses
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

  default-language:
    Haskell2010
  ghc-options:
    -O2 -funbox-strict-fields
  if flag(debug)
    cpp-options: -DADPFUSION_CHECKS



--test-suite properties
--  type:
--    exitcode-stdio-1.0
--  main-is:
--    properties.hs
--  other-modules:
--    QuickCheck.Common
--    QuickCheck.Set
--  ghc-options:
--    -threaded -rtsopts -with-rtsopts=-N
--  hs-source-dirs:
--    tests
--  default-language:
--    Haskell2010
--  default-extensions: BangPatterns
--                    , CPP
--                    , FlexibleContexts
--                    , FlexibleInstances
--                    , MultiParamTypeClasses
--                    , ScopedTypeVariables
--                    , TemplateHaskell
--                    , TypeFamilies
--                    , TypeOperators
--                    , TypeSynonymInstances
--  cpp-options:
--    -DADPFUSION_TEST_SUITE_PROPERTIES
--  build-depends: base
--               , ADPfusion
--               , bits
--               , OrderedBits
--               , PrimitiveArray
--               , QuickCheck
--               , strict
--               , test-framework               >= 0.8  && < 0.9
--               , test-framework-quickcheck2   >= 0.3  && < 0.4
--               , test-framework-th            >= 0.2  && < 0.3
--               , vector



source-repository head
  type: git
  location: git://github.com/choener/ADPfusionSet

